--- a/src/main/resources/frontend/tsconfig.json
+++ b/src/main/resources/frontend/tsconfig.json
@@ -6,6 +6,10 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "allowJs": true,  // Enable JavaScript file imports
+    "esModuleInterop": true,  // Enable interoperability between CommonJS and ES Modules
+ 
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
