--- a/src/main/resources/frontend/package.json
+++ b/src/main/resources/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "@trussworks/react-uswds": "^9.0.0",
+    "@uswds/uswds": "^3.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0"
