--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Postgres -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
