--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
         static-locations: 
           - classpath:/dist
 
-#   datasource:
-#       url: ${DB_URL}
-#       username: ${DB_USERNAME}
-#       password: ${DB_PASSWORD}                              
+  datasource:
+      url: ${DB_URL}
+      username: ${DB_USERNAME}
+      password: ${DB_PASSWORD}                              
 
   jpa:
       database-platform: org.hibernate.dialect.H2Dialect      
