--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+
 		<dependency>
 
 		<!-- Spring Boot deps -->
