--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20240303</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
 		</dependency>
-
+		
 		<dependency>
 
 		<!-- Spring Boot deps -->
