--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
       properties:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
-  devtools:
-    restart:
-      exclude: frontend/**
+  # devtools:
+  #   restart:
+  #     exclude: frontend/**
 
 server:
   port: ${PROGRAM_PORT} 
