--- a/.hintrc
+++ b/.hintrc
@@ -8,6 +8,12 @@
       {
         "select-name": "off"
       }
+    ],
+    "axe/aria": [
+      "default",
+      {
+        "aria-valid-attr-value": "off"
+      }
     ]
   }
 }
