--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -78,6 +78,19 @@
                 "reveal": "always",
                 "panel": "shared"
             }
+        },
+        {
+            "label": "Run tailwind updates",
+            "type": "shell",
+            "command": "build-scripts/runTailwind.bat",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared"
+            }
         }
     ]
 }
