Working docker file

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ src/main/react/coverage/lcov-report/prettify.js
 src/main/react/coverage/lcov-report/sorter.js
 
 src/main/resources/dist
+Project-2-SkSt.zip
